kubernetes/vault/overlays/okd/route.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: vault
  namespace: vault
  labels:
    app.kubernetes.io/instance: vault
  annotations:
    route.openshift.io/termination: reencrypt
    route.openshift.io/destination-ca-certificate-secret: ca-bundle
spec:
  ingressClassName: openshift-default
  rules:
    - host: vault.arthurvardevanyan.com
      http:
        paths:
          - path: ""
            pathType: ImplementationSpecific
            backend:
              service:
                name: vault
                port:
                  name: vault
  tls:
    - hosts:
        - vault.arthurvardevanyan.com
      secretName: vault-cert
