kubernetes/vault/overlays/okd/egress-firewall.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: vault
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
    # MicroShift
    - type: Allow
      to:
        cidrSelector: 10.0.0.99/32
    # Google Range
    # https://support.google.com/a/answer/10026322?hl=en
    # https://www.gstatic.com/ipranges/goog.json
    - type: Allow
      to:
        cidrSelector: 142.250.0.0/15
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
