kubernetes/vault/overlays/okd/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-server
  namespace: vault
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: vault
spec:
  podSelector:
    matchLabels:
      app: vault
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: openshift-kube-apiserver
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-kube-apiserver
      ports:
        - protocol: TCP
          port: 6443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-traffic
  namespace: vault
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: vault
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: vault
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
          podSelector:
            matchLabels:
              dns.operator.openshift.io/daemonset-dns: default
      ports:
        - port: 5353
          protocol: UDP
        - port: 5353
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-egress
  namespace: vault
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: vault
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: vault
  egress:
    - to:
        - ipBlock:
            cidr: 142.250.0.0/15
          # - ipBlock:
          #     cidr: 0.0.0.0/0
          #     except:
          #       - 10.0.0.0/8
          #       - 172.16.0.0/12
          #       - 192.168.0.0/16
